2007-02-22  John W. Eaton  <jwe@octave.org>

	* variables.cc (symbol_out_of_date): If checking nested function,
	look for file using parent function name.  Delete unused
	variable NAMES.

	* src/oct-stream.cc (octave_stream::do_gets): If no limit or not
	at limit, read ahead one character at end of line for compatibility.
	(octave_stream::gets, octave_stream::getl): Set max_len to -1 if
	tc_max_len is not defined.
	* file-io.cc (Ffgets, Ffgetl): If no limit specified, pass
	undefined octave_value object as max_len in call to
	octave_stream::gets.

2007-02-21  John W. Eaton  <jwe@octave.org>

	* mex.cc (mexErrMsgIdAndTxt, mexWarnMsgIdAndTxt): Handle second
	arg as format and accept variable number of arguments.
	* mexproto.h: Fix decls.

	* error.h, error.cc (vmessage, vusage, vwarning, verror,
	vparse_error, vmessage_with_id, vusage_with_id, vwarning_with_id,
	verror_with_id, vparse_error_with_id): Provide va_list versions of
	variadic error, warning, and message functions.
	(message, usage, warning, error, parse_error, message_with_id,
	usage_with_id, warning_with_id, error_with_id,
	parse_error_with_id): Call va_list versions.

	* DLD-FUNCTIONS/urlwrite.cc (Furlwrite, Furlread): Return error
	code and message instead of throwing error if functionality is
	missing.

	* oct-obj.h (octave_value_list::splice): Set default for
	replacement list argument.

2007-02-20  Rafael Laboissiere  <rafael@laboissiere.net>

	* DLD-FUNCTIONS/__glpk__.cc: Adapt code for changes in the GLPK
	API for version 4.15 or later.

2007-02-20  John W. Eaton  <jwe@octave.org>

	* mxarray.h (mxArray::get_scalar): New function.
	* mex.cc (mxArray_base::get_scalar): New pure virtual function.
	(mxArray_octave_value::get_scalar, mxArray_matlab::get_scalar,
	mxArray_number::get_scalar): New functions.
	(mxGetScalar): Call get_scalar here.

	* mex.cc (mxArray_octave_value::get_dimensions): Cache ndims here.
	(mxArray_octave_value::get_number_of_dimensions):